# CMake_HTTP_Server

./: CMakeLists.txt
WebServer/: CMakeLists.txt  WebServer.cpp  WebServer.h
WebServer/include/: Networking.hpp
WebServer/include/Networking/: AddressFamily.hpp  BindingSocket.hpp  SimpleSocket.hpp  Sockets.hpp
WebServer/include/Networking/Sockets/: AddressFamily.hpp  BindingSocket.hpp  ClientSocket.hpp  ListeningSocket.hpp  SimpleSocket.hpp
WebServer/src/Networking/: BindingSocket.cc  SimpleSocket.cc
WebServer/src/Networking/Sockets/: BindingSocket.cc  ClientSocket.cc  ListeningSocket.cc  SimpleSocket.cc
